<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_option">Select an option:</string>
    <string name="app_name">MarketLink</string>
    <string name="selling">Selling</string>
    <string name="buying">Buying</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="district">District</string>
    <string name="crop">Crop</string>
    <string name="server">http://test.applab.org</string>
    <string name="hello">hello world</string>
    <string name="farmer">Farmer</string>
    <string name="quantity">Quantity\n(kg)</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="buyers">/getBuyers</string>
    <string name="districts_crops">/getDistrictsAndCrops</string>
    <string name="farmers_market_prices">/getFarmersAndMarketPrices</string>
    <string name="upload_url">/postCompleteTransaction</string>
    <string name="iconDescription">an icon</string>
    <string name="synch">Synchronize</string>
    <string name="history">Transaction History</string>
    
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
</resources>
