<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/select_option"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignRight="@+id/textView1"
        android1:layout_below="@+id/textView1"
        android1:layout_marginTop="26dp" >

        <RadioButton
            android1:id="@+id/radio_selling"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/selling"
            android1:onClick="onRadioButtonClicked" />

        <RadioButton
            android1:id="@+id/radio_buying"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/buying"
            android1:onClick="onRadioButtonClicked" />
    </RadioGroup>

</RelativeLayout>