<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
         
         <TextView android:text="@string/farmer" 
                   android:layout_width="60dip"
                   android:layout_height="wrap_content"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentTop="true"
                   android:layout_marginTop="37dp"   
                   android:id="@+id/farmerText"
                   android:textSize="15dp"
                   
         /> 
                   
        <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android" 
                  android:layout_width="130dip"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@+id/farmerText"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentRight="true"
                  android:layout_marginTop="37dp"
                  android:id="@+id/farmer"
                  android:textColor="#000000"
                  />
            
        <TextView android:text="@string/quantity"
                   android:layout_width="60dip"                   
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/farmer"                   
                   android:id="@+id/quantityText"     
                   android:textSize="15dp"              
                   />
                  
        <EditText android:layout_width="130dip"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/farmer"
                   android:layout_toRightOf="@+id/quantityText"
                   android:layout_alignParentRight="true"
                   android:inputType="phone"
                  android:id="@+id/quantity"/>
                  
        <Button  
		    android:layout_width="140dip" 
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:text="@string/add_farmer"
		    android:layout_below="@+id/quantity"
		    android:id="@+id/addFarmerButton"
		    />
        
                 <ListView android:id="@android:id/list" 
                   android:layout_width="fill_parent" 
                   android:layout_height="wrap_content"
                   android:layout_alignParentLeft="true"
                   android:layout_below="@+id/addFarmerButton"
          />
		    
		 <Button  
		    android:layout_width="160dip" 
		    android:layout_height="wrap_content" 
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"
		    android:text="@string/back_button"
		    android:id="@+id/back_find_farmers"
		    />
		    <Button  
		     android:layout_width="160dip" 
		    android:layout_height="wrap_content" 
		    android:layout_alignParentBottom="true"
		     android:layout_alignParentRight="true"
		    android:text="@string/next_button"
		    android:id="@+id/next_market_prices"
		    />        
     </RelativeLayout>